# shalaby_to_do

./: README.md  pyproject.toml  requirements.txt
shtodo/: __init__.py  __main__.py  cli.py  config.py  database.py  shtodo.py
tests/: test_shtodo.py
