[tool.poetry]
name = "shalaby_to_do"
version = "0.1.0"
description = "Shalaby to do Command Line Interface App"
authors = ["shalaby <mhdshalabystar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer="0.6.1"
attrs==21.4.0
click==8.1.3
colorama==0.4.5
commonmark==0.9.1
iniconfig==1.1.1
packaging==21.3
pluggy="1.0.0"
py="1.11.0"
Pygments="2.12.0"
pyparsing="3.0.9"
pytest="7.1.2"
rich="12.5.1"
shellingham="1.4.0"
tomli="2.0.1"
typing_extensions="4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
